# DCMTKcs

dcmjp2kcs/: CMakeLists.txt
dcmjp2kcs/libsrc/: CMakeLists.txt
